{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "33b5b22d-9215-4f5e-9bd7-a4c4a0321987",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "6422f521-e5bf-4136-b9e0-e93f181e4567",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "a7ca3d61-6d30-4db6-85fe-3f73cb7ee648",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "b7dcd032-b257-4f0b-854c-1a66be95bd47",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9d9686e-bfb2-452c-a528-09c3dee32e06",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "813730ad-921f-4482-85e8-d8b650813cb4",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b66cb74-71b6-4bdc-9ebc-6e97f4f4ad6b",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}